tests/src/frontend/syntax/invalid/lvalue_in_with.sk
fun main(): String {
  x.!y with { a }
}
